# maso

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md  cog.toml
.github/workflows/: build.yml  cocogitto.yml  release.yml  rust.yml
hooks/: commit-msg.sh  pre-commit.sh
